[package]
name = "float-hash-of"
version = "0.1.0"
authors = ["That3Percent <that3percent@gmail.com>"]
edition = "2018"
description = "Stores 63 bits of a hash in an f64 for interop with JavaScript"
homepage = "https://github.com/That3Percent/float-hash-of"
repository = "https://github.com/That3Percent/float-hash-of"
readme = "README.md"
keywords = ["javascript", "hash", "interop"]
categories = ["web-programming"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hash-of="0.1.0"